--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.0",
-    "@angular/common": "^14.2.0",
-    "@angular/compiler": "^14.2.0",
-    "@angular/core": "^14.2.0",
-    "@angular/forms": "^14.2.0",
-    "@angular/platform-browser": "^14.2.0",
-    "@angular/platform-browser-dynamic": "^14.2.0",
-    "@angular/router": "^14.2.0",
+    "@angular/animations": "^15.1.5",
+    "@angular/common": "^15.1.5",
+    "@angular/compiler": "^15.1.5",
+    "@angular/forms": "^15.1.5",
+    "@angular/platform-browser": "^15.1.5",
+    "@angular/platform-browser-dynamic": "^15.1.5",
+    "@angular/router": "^15.1.5",
     "@kolkov/ngx-gallery": "^2.0.1",
     "@microsoft/signalr": "^7.0.0",
     "bootstrap": "^5.2.2",
@@ -33,9 +32,11 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.5",
-    "@angular/cli": "~14.2.5",
-    "@angular/compiler-cli": "^14.2.0",
+    "@angular-devkit/build-angular": "^15.1.5",
+    "@angular/cli": "^15.1.5",
+    "@angular/compiler-cli": "^15.1.5",
+    "@angular/core": "^15.1.5",
+    "@ngrx/store-devtools": "^15.3.0",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
